<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/relLayout"
    android:background="@color/Color5">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView android:text="@string/title" android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="75sp"
            android:textIsSelectable="false"
            android:id="@+id/title"
            android:textColor="@color/Color1"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/title2"
            android:layout_alignStart="@+id/title2"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title2"
            android:id="@+id/title2"
            android:textColor="@color/Color4"
            android:textSize="30sp"
            android:layout_below="@+id/title"
            android:layout_marginBottom="50dp"
            android:gravity="center_vertical|center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:text="@string/button1"
            android:id="@+id/button1"
            android:layout_above="@+id/button2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/Color4"
            android:textColor="@color/Color3"
            android:elegantTextHeight="false"
            android:layout_marginBottom="25dp"
            android:textSize="25dp"
            android:onClick="onClick_Pres" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:layout_above="@+id/button3"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:layout_alignRight="@+id/button"
            android:layout_alignEnd="@+id/button"
            android:background="@color/Color4"
            android:textColor="@color/Color3"
            android:layout_marginBottom="25dp"
            android:textSize="25dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="36dp"
            android:layout_alignRight="@+id/button2"
            android:layout_alignEnd="@+id/button2"
            android:background="@color/Color4"
            android:textColor="@color/Color3"
            android:textSize="25dp" />
    </LinearLayout>

</RelativeLayout>
