<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".TutoActivity"
    android:id="@+id/layout_tuto1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:background="@color/Color3" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_weight="0.05">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tuto_title1"
                android:id="@+id/textView"
                android:onClick="onClick_Title"
                android:clickable="true"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="15dp"
                android:background="@color/Color1"
                android:elegantTextHeight="false"
                android:textColor="@color/Color3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView2"
                android:onClick="onClick_Title"
                android:clickable="true"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="15dp"
                android:background="@color/Color5"
                android:textColor="@color/Color1"
                android:text="@string/tuto_title2"
                android:minHeight="15dp"
                android:maxHeight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView3"
                android:onClick="onClick_Title"
                android:clickable="true"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="15dp"
                android:background="@color/Color5"
                android:textColor="@color/Color1"
                android:text="@string/tuto_title3" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tuto_title1"
            android:id="@+id/textView4"
            android:layout_weight="0.05"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/Color1"
            android:textColor="@color/Color3"
            android:minHeight="40dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Color3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_marginTop="10dp"
                android:minHeight="25dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/plainView"
                    android:src="@drawable/plain"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.25"
                    android:onClick="onClick_Type" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/hillView"
                    android:src="@drawable/hill1"
                    android:layout_weight="0.25"
                    android:layout_marginRight="5dp"
                    android:onClick="onClick_Type" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/sandView"
                    android:src="@drawable/sand"
                    android:layout_weight="0.25"
                    android:layout_marginRight="5dp"
                    android:onClick="onClick_Type" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/waterView"
                    android:src="@drawable/water1"
                    android:layout_weight="0.25"
                    android:onClick="onClick_Type" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_weight="0.75">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tuto_type1"
                    android:id="@+id/type_text"
                    android:textColor="@color/Color1"
                    android:layout_gravity="center_vertical"
                    android:autoText="false"
                    android:elegantTextHeight="false"
                    android:layout_marginBottom="50dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</RelativeLayout>