<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:background="@color/Color3">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/Color5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pres_title1"
                android:id="@+id/textView5"
                android:onClick="onClick"
                android:clickable="true"
                android:layout_weight="0.1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@color/Color1"
                android:elegantTextHeight="false"
                android:textColor="@color/Color3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pres_title2"
                android:id="@+id/textView6"
                android:onClick="onClick"
                android:clickable="true"
                android:layout_weight="0.1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pres_title3"
                android:id="@+id/textView7"
                android:onClick="onClick"
                android:clickable="true"
                android:layout_weight="0.1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="15dp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pres_title1"
            android:id="@+id/textView4"
            android:layout_weight="0.15"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/Color1"
            android:textColor="@color/Color3" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Paragraphe 1"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="0.25"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/Color1"
            android:textColor="@color/Color3" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Paragraphe 2"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.25"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/Color1"
            android:textColor="@color/Color3" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Paragraphe 3"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.25"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/Color1"
            android:textColor="@color/Color3" />

    </LinearLayout>
</RelativeLayout>