<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/layout_tuto2"
    tools:context=".TutoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:background="@color/Color3">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tuto_title1"
                android:id="@+id/textView9"
                android:onClick="onClick_Title"
                android:clickable="true"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="15dp"
                android:background="@color/Color5"
                android:textColor="@color/Color1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView10"
                android:onClick="onClick_Title"
                android:clickable="true"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@color/Color1"
                android:textColor="@color/Color3"
                android:text="@string/tuto_title2"
                android:maxHeight="15dp"
                android:minHeight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView11"
                android:onClick="onClick_Title"
                android:clickable="true"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="15dp"
                android:background="@color/Color5"
                android:textColor="@color/Color1"
                android:text="@string/tuto_title3" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tuto_title2"
            android:id="@+id/textView12"
            android:layout_weight="0.15"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/Color1"
            android:textColor="@color/Color3"
            android:maxHeight="15dp"
            android:minHeight="15dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:background="@color/Color3"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tuto_pipes1"
                    android:id="@+id/textView13"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:elegantTextHeight="false"
                    android:textColor="@color/Color1"
                    android:minHeight="150dp" />
            </TableRow>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/tuto_pipe1"
                        android:src="@drawable/plain"
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="20dp"
                        android:paddingRight="5dp" />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/tuto_pipe2"
                        android:src="@drawable/hill2"
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/tuto_pipe3"
                        android:src="@drawable/plain"
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="20dp"
                        android:paddingRight="5dp" />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/tuto_pipe4"
                        android:src="@drawable/plain"
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="20dp" />
                </LinearLayout>
            </LinearLayout>
        </TableLayout>

    </LinearLayout>
</RelativeLayout>